Updated vector spec handling so --vectors/--dataset inputs are consistent across updated commands, with shared parsing/completion and remote gating, and added range parsing support for [n] plus bracket variants with expanded tests.
Commands updated: analyze explore, analyze plot, analyze select, analyze find, analyze slice, analyze profile, analyze zeros, analyze verifyknn, analyze count_zeros, info file, convert file, compute knn, compute sort, generate fvecExtract, generate ivecExtract, generate mktestdata